Fixed logo container alignment on listing overlay page for desktop

--- a/src/components/shared/logo/desktop/desktopLogo.module.scss
+++ b/src/components/shared/logo/desktop/desktopLogo.module.scss
@@ -1,3 +1,8 @@
+.container {
+  display: flex;
+  align-self: center;
+}
+
 .logo {
   display: flex;
   align-self: center;
